# slogger

./: Cargo.toml
app-config/: Cargo.toml
app-config/src/: lib.rs
app-persistence/: Cargo.toml
app-persistence/migrations/: 0001_initial.sql
app-persistence/src/: db.rs  lib.rs  qso_repo.rs  station_repo.rs
app-ui/: Cargo.toml
app-ui/src/: main.rs
app-ui/src/app/: boot.rs  constants.rs  focus.rs  helpers.rs  layout.rs  message.rs  mod.rs  panes.rs  services.rs  spots.rs  state.rs  subscriptions.rs  types.rs  update.rs  view.rs
app-ui/src/app/drawers/: awards.rs  logbook.rs  mod.rs  sessions.rs
app-ui/src/app/views/: logbook.rs  mod.rs  operating.rs  qsl.rs
clublog-sync/: Cargo.toml
clublog-sync/src/: lib.rs
docs/: example-config.toml
eqsl-sync/: Cargo.toml
eqsl-sync/src/: fetch.rs  lib.rs  upload.rs
hrdlog-sync/: Cargo.toml
hrdlog-sync/src/: lib.rs
keyer-control/: Cargo.toml
keyer-control/src/: lib.rs
logbook-domain/: Cargo.toml
logbook-domain/src/: awards.rs  commands.rs  export.rs  import.rs  lib.rs  queries.rs  repository.rs  service.rs
lotw-sync/: Cargo.toml
lotw-sync/src/: fetch.rs  lib.rs  upload.rs
plans/: backend-capability-summary.md  features-and-configuration.md  initial-plan-details.md  initial-plan-overview.md
qrz-sync/: Cargo.toml
qrz-sync/src/: lib.rs
radio-core/: Cargo.toml
radio-core/src/: ids.rs  lib.rs  qso.rs  station.rs  value.rs  wpx.rs
rig-control/: Cargo.toml
rig-control/src/: lib.rs
so2r-control/: Cargo.toml
so2r-control/src/: lib.rs
spot-feed/: Cargo.toml
spot-feed/src/: lib.rs
station-resolver/: Cargo.toml
station-resolver/src/: cty.rs  dxcc_table.rs  lib.rs  resolution.rs  resolver.rs
wsjtx-bridge/: Cargo.toml
wsjtx-bridge/src/: lib.rs  listener.rs  parser.rs
