[package]
name = "app-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "slogger"
path = "src/main.rs"

[dependencies]
radio-core.workspace = true
logbook-domain.workspace = true
app-persistence.workspace = true
app-config.workspace = true
lotw-sync.workspace = true
eqsl-sync.workspace = true
clublog-sync.workspace = true
hrdlog-sync.workspace = true
qrz-sync.workspace = true
rig-control.workspace = true
keyer-control.workspace = true
so2r-control.workspace = true
spot-feed.workspace = true
station-resolver.workspace = true
wsjtx-bridge.workspace = true
anyhow.workspace = true
chrono.workspace = true
dirs.workspace = true
iced = { version = "0.14", features = ["tokio", "advanced"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
