[package]
name = "lotw-sync"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
adif_parser.workspace = true
chrono.workspace = true
reqwest.workspace = true
serde.workspace = true
thiserror.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["process", "fs", "io-util", "macros", "rt-multi-thread"] }
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["process", "fs", "io-util", "macros", "rt-multi-thread", "net", "time"] }
